--- a/teletrack_sim/.gitignore
+++ b/teletrack_sim/.gitignore
@@ -73,3 +73,37 @@ conan.lock
 CMakeFiles/
 CMakeCache.txt
 conan*.sh
+
+
+# Conan and CMake generated build folders
+build/
+.build/
+CMakeFiles/
+CMakeCache.txt
+cmake_install.cmake
+Makefile
+
+# Conan output
+conan.lock
+conan*.sh
+conan*.txt
+conan*.cmake
+
+# Python virtual environment
+.venv/
+venv/
+ENV/
+env/
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyc
+
+# VSCode and editor configs (optional)
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Presets and misc
+CMakeUserPresets.json
