--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,17 +1,13 @@
-name: C++ CI - TeleTrack Sim (CMake DAG + Conan)
+name: C++ CI - TeleTrackSim DAG
 
 on:
   push:
-    branches:
-      - master
-      - "D*"
+    branches: [ master, "D*" ]
     paths:
       - "teletrack_sim/**"
       - ".github/workflows/**"
   pull_request:
-    branches:
-      - master
-      - "D*"
+    branches: [ master, "D*" ]
     paths:
       - "teletrack_sim/**"
 
@@ -68,41 +64,67 @@ jobs:
       - name: Build Aggregator
         run: cmake --build build/aggregator
 
-  build-main:
-    name: Build + Run Full App (CMake + Conan)
-    needs: [gnss, engine, logger, aggregator]
+  step-checkout:
+    name: Checkout + Setup (Full App)
     runs-on: ubuntu-latest
+    needs: [gnss, engine, logger, aggregator]
     defaults:
       run:
         working-directory: teletrack_sim
     steps:
       - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-
-      - name: Cache Conan packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.conan2/p
-          key: ${{ runner.os }}-conan-${{ hashFiles('**/conanfile.txt') }}
-
       - name: Install Conan
         run: pip install conan
-
-      - name: Detect Conan profile
+      - name: Detect Conan Profile
         run: conan profile detect --force
 
-      - name: Install Conan dependencies
+  step-conan:
+    name: Conan Install Deps
+    runs-on: ubuntu-latest
+    needs: step-checkout
+    defaults:
+      run:
+        working-directory: teletrack_sim
+    steps:
+      - uses: actions/checkout@v4
+      - name: Conan Install
         run: conan install . -of=build --build=missing --conf tools.cmake.cmaketoolchain:generator=False
 
-      - name: Configure CMake with Conan Toolchain
+  step-cmake-configure:
+    name: CMake Configure (Full App)
+    runs-on: ubuntu-latest
+    needs: step-conan
+    defaults:
+      run:
+        working-directory: teletrack_sim
+    steps:
+      - uses: actions/checkout@v4
+      - name: CMake Configure
         run: cmake -S . -B build -DCMAKE_TOOLCHAIN_FILE=build/conan_toolchain.cmake -DCMAKE_BUILD_TYPE=Release
 
-      - name: Build Full App
+  step-cmake-build:
+    name: Build Full App
+    runs-on: ubuntu-latest
+    needs: step-cmake-configure
+    defaults:
+      run:
+        working-directory: teletrack_sim
+    steps:
+      - uses: actions/checkout@v4
+      - name: CMake Build
         run: cmake --build build
 
-      - name: Run Application
+  step-run-app:
+    name: Run Application
+    runs-on: ubuntu-latest
+    needs: step-cmake-build
+    defaults:
+      run:
+        working-directory: teletrack_sim
+    steps:
+      - uses: actions/checkout@v4
+      - name: Run App
         run: ./build/teletrack_sim
