--- a/teletrack_sim/CMakeLists.txt
+++ b/teletrack_sim/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.15)
 project(TeleTrackSim)
 
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # 🧪 Enable CTest-based unit testing
 enable_testing()
