--- a/D018/CMakeLists.txt
+++ b/D018/CMakeLists.txt
@@ -12,23 +12,23 @@
 
 
 # Testing support
-include(CTest)
-enable_testing()       # ← turn on BUILD_TESTING so subdirs add their tests
+# include(CTest)
+# enable_testing()       # ← turn on BUILD_TESTING so subdirs add their tests
 
-find_package(GTest CONFIG REQUIRED)
+# find_package(GTest CONFIG REQUIRED)
 
 # Add your modules
-add_subdirectory(modules/gnss_simulator)
+# add_subdirectory(modules/gnss_simulator)
 
 # Main executable
 add_executable(project_teletrack_sim
      src/main.cpp
  )
 
- target_include_directories(project_teletrack_sim PRIVATE
-     modules/gnss_simulator/include
- )
+#  target_include_directories(project_teletrack_sim PRIVATE
+#      modules/gnss_simulator/include
+#  )
 
- target_link_libraries(project_teletrack_sim PRIVATE
-     gnss_simulator
- )
+#  target_link_libraries(project_teletrack_sim PRIVATE
+#      gnss_simulator
+#  )
