--- a/D018-gof-Factory/CMakeLists.txt
+++ b/D018-gof-Factory/CMakeLists.txt
@@ -1,34 +1,26 @@
-################################################################################
-# Root CMakeLists.txt for project-teletrack-sim
-################################################################################
+cmake_minimum_required(VERSION 3.16..3.24)
 
- cmake_minimum_required(VERSION 3.16..3.24)
+project(project_teletrack_sim
+    VERSION 0.0.1
+    DESCRIPTION "Simple Transport Simulation"
+    LANGUAGES CXX
+)
 
- project(project_teletrack_sim
-         VERSION 0.0.1
-         DESCRIPTION "project-teletrack-sim"
-         LANGUAGES CXX
- )
-
-
-# Testing support
-# include(CTest)
-# enable_testing()       # ← turn on BUILD_TESTING so subdirs add their tests
-
-# find_package(GTest CONFIG REQUIRED)
-
-# Add your modules
-# add_subdirectory(modules/gnss_simulator)
-
-# Main executable
+# Add the executable
 add_executable(project_teletrack_sim
-     src/main.cpp
- )
+    src/main.cpp
+    src/Car.cpp
+    src/Ship.cpp
+)
 
-#  target_include_directories(project_teletrack_sim PRIVATE
-#      modules/gnss_simulator/include
-#  )
+# Tell the compiler where to find headers
+target_include_directories(project_teletrack_sim PRIVATE
+    include
+)
 
-#  target_link_libraries(project_teletrack_sim PRIVATE
-#      gnss_simulator
-#  )
+# Set C++ standard
+set_target_properties(project_teletrack_sim PROPERTIES
+    CXX_STANDARD 17
+    CXX_STANDARD_REQUIRED YES
+    CXX_EXTENSIONS NO
+)
