--- a/D025-State-Machine/CMakeLists.txt
+++ b/D025-State-Machine/CMakeLists.txt
@@ -9,7 +9,7 @@ project(project_teletrack_sim
 # Add the executable
 add_executable(project_teletrack_sim
     src/main.cpp
-    src/observer.cpp
+    src/traffic_light.cpp
 )
 
 # Tell the compiler where to find headers
