--- a/D025-State-Machine/CMakeLists.txt
+++ b/D025-State-Machine/CMakeLists.txt
@@ -23,3 +23,15 @@ set_target_properties(project_teletrack_sim PROPERTIES
     CXX_STANDARD_REQUIRED YES
     CXX_EXTENSIONS NO
 )
+
+# --- Unit Testing Setup ---
+include(CTest)
+enable_testing()
+
+if (BUILD_TESTING)
+    find_package(GTest CONFIG REQUIRED)
+    add_executable(test_traffic_light tests/test_traffic_light.cpp src/traffic_light.cpp)
+    target_include_directories(test_traffic_light PRIVATE include)
+    target_link_libraries(test_traffic_light PRIVATE GTest::gtest_main)
+    add_test(NAME TrafficLightTest COMMAND test_traffic_light)
+endif()
